--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="row m-0">
     <div class="cabecalho text-box p-0 col-lg-7 mr-3">
-      <h1>{{'newNC.step1.product.title'| translate}}</h1>
+      <h1>{{'newNC.step1.product.title'| translate}} *</h1>
       <p>
         {{'newNC.step1.product.subtitle1'| translate}}
         <br />
