--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -1,11 +1,11 @@
 <div class="div-ident-parceiro row">
-  <h1 class="titulo-parceiro">Dados do Produto</h1>
+  <h1 class="titulo-parceiro">{{'newNC.step1.product.title'| translate}}</h1>
   <div class="dados-parceiro col razao-social">
     <div class="d-flex">
       <h2 class="mr-2">
         {{
           this.nonComplicanceService.nc?.product?.name ||
-            "Não se Aplica"
+          'global.dontApply'| translate
         }}
       </h2>
       <p-chip>
@@ -16,7 +16,7 @@
     <p class="d-block">
       {{
       this.nonComplicanceService.nc?.product?.description ||
-          "Não se Aplica"
+      'global.dontApply'| translate
       }}
     </p>
   </div>
@@ -25,7 +25,7 @@
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-calculator"></i>
         <div>
-          <span class="info-titulo">Quantidade Total</span>
+          <span class="info-titulo">{{'newNC.step1.product.amount'| translate}}</span>
           <br />
           <span class="info-dados">{{
             this.nonComplicanceService.nc.quant_total || "0"
@@ -35,7 +35,7 @@
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-calculator"></i>
         <div>
-          <span class="info-titulo">Quantidade em Não Conformidade</span>
+          <span class="info-titulo">{{'newNC.step1.product.amountNC'| translate}}</span>
           <br />
           <span class="info-dados">{{
             this.nonComplicanceService.nc.quant_nc || "0"
@@ -45,7 +45,7 @@
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-percent"></i>
         <div>
-          <span class="info-titulo">Percentual</span>
+          <span class="info-titulo">{{'newNC.step1.product.amountNC'| translate}}</span>
           <br />
           <span class="info-dados">{{ getPercent() }}</span>
         </div>
@@ -56,25 +56,25 @@
 <div class="div-ident-parceiro mt-3">
   <h2>
     <i class="bi bi-people"></i>
-    Ponto de Controle 
+    {{'newNC.review.checkpoint'| translate}}
   </h2>
   <div class="d-flex">
     <div class="col-6 d-flex flex-row">
       <i class="pi pi-directions mr-1"></i>
       <div>
         <span class="info-titulo">{{
-          this.nonComplicanceService.nc?.tipo_controle || "Dado não preenchido"
+          this.nonComplicanceService.nc?.tipo_controle || 'global.empty'| translate
           }}</span>
       </div>
     </div>
     <div class="d-flex flex-row" *ngIf="this.nonComplicanceService.nc?.tipo_controle!='PR'">
       <i class="bi bi-calculator mr-1"></i>
       <div >
-        <span class="info-titulo">Número</span>
+        <span class="info-titulo">{{'global.number'| translate}}</span>
         <br />
         <p class="info-dados">
           {{
-          (this.nonComplicanceService.nc?.num_op || this.nonComplicanceService.nc?.num_nota)|| "Dado não preenchido"
+          (this.nonComplicanceService.nc?.num_op || this.nonComplicanceService.nc?.num_nota)|| 'global.empty'| translate
           }}
         </p>
       </div>
@@ -83,7 +83,7 @@
   <div class="dados-parceiro razao-social item mt-3" *ngIf="returnFile('pontoControle').length>0">
     <h2 class="mr-2 mb-5">
       <i class="bi bi-paperclip"></i>
-      Anexos
+      {{'global.fileInput.attachments'| translate}}
     </h2>
     <p-carousel
             [value]="returnFile('pontoControle')"
@@ -102,13 +102,13 @@
 <div class="div-ident-parceiro pr-4 mt-3">
   <h2>
     <i class="bi bi-people"></i>
-    Ponto de Rejeição
+    {{'newNC.step1.rejectionPoint.title'| translate}}
   </h2>
   <div class="d-flex dados-contato mb-3 ">
     <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="this.nonComplicanceService.nc?.num_lote">
       <i class="bi bi-123"></i>
       <div>
-        <span class="info-titulo">Número do Lote</span>
+        <span class="info-titulo">{{'newNC.step1.rejectionPoint.numBatch'| translate}}</span>
         <br />
         <span class="info-dados">{{
           this.nonComplicanceService.nc?.num_lote || "0"
@@ -118,7 +118,7 @@
     <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="this.nonComplicanceService.nc?.num_ordem_compra">
       <i class="bi bi-123"></i>
       <div>
-        <span class="info-titulo">Quantidade em Não Conformidade</span>
+        <span class="info-titulo">{{'newNC.step1.rejectionPoint.numOC'| translate}}</span>
         <br />
         <span class="info-dados">{{
           this.nonComplicanceService.nc?.num_ordem_compra || "0"
@@ -128,7 +128,7 @@
     <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="this.nonComplicanceService.nc?.instruction?.code">
       <i class="bi bi-123"></i>
       <div>
-        <span class="info-titulo">IT</span>
+        <span class="info-titulo">{{'newNC.step1.rejectionPoint.it'| translate}}</span>
         <br />
         <span class="info-dados">{{ "Numero: " + this.nonComplicanceService.nc?.instruction?.code || "0" }}</span>
         <br />
@@ -140,7 +140,7 @@
     <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="this.nonComplicanceService.nc?.procedure">
       <i class="bi bi-123"></i>
       <div>
-        <span class="info-titulo">Número PR</span>
+        <span class="info-titulo">{{'newNC.step1.rejectionPoint.it'| translate}}</span>
         <br />
         <span class="info-dados">{{ this.nonComplicanceService.nc?.procedure?.code|| "0" }}</span>
       </div>
