--- a/src/app/pages/dashboards/charts/nc-status/nc-status.component.html
+++ b/src/app/pages/dashboards/charts/nc-status/nc-status.component.html
@@ -22,6 +22,8 @@
     [xAxisLabel]="xAxisLabel"
     [yAxisLabel]="yAxisLabel"
     (select)="onSelect($event)"
+    [scheme]="gridColor"
+    
   >
   </ngx-charts-bar-vertical>
 </div>
