--- a/src/app/pages/dashboards/charts/nc-types/nc-types.component.html
+++ b/src/app/pages/dashboards/charts/nc-types/nc-types.component.html
@@ -20,6 +20,7 @@
     [showYAxisLabel]="showYAxisLabel"
     [xAxisLabel]="xAxisLabel"
     [yAxisLabel]="yAxisLabel"
+    [scheme]="gridColor"
   >
   </ngx-charts-bar-vertical>
 </div>
