--- a/src/app/pages/dashboards/charts/cost-sector/cost-sector.component.html
+++ b/src/app/pages/dashboards/charts/cost-sector/cost-sector.component.html
@@ -1,7 +1,17 @@
-<div class="d-flex flex-column justify-content-center align-items-start" style="">
-  <div class="d-flex justify-content-center align-items-center" style="width: 100%;">
-    
+<div
+  class="d-flex flex-column justify-content-center align-items-start"
+  style=""
+>
+  <div
+    class="d-flex justify-content-center align-items-center"
+    style="width: 100%"
+  >
+    <h2>Número de Ncs x Custo Total</h2>
   </div>
+  <div
+    class="d-flex justify-content-center align-items-center"
+    style="width: 100%"
+  ></div>
   <div>
     <p-dropdown
       [options]="setoresAux"
@@ -10,7 +20,5 @@
     ></p-dropdown>
   </div>
 
-  <div *ngIf="display">
-    <plotly-plot [data]="graph.data" [layout]="graph.layout"> </plotly-plot>
-  </div>
+  <plotly-plot [data]="graph.data" [layout]="graph.layout"> </plotly-plot>
 </div>
