--- a/src/app/pages/dashboards/charts/nc-receptor/nc-receptor.component.html
+++ b/src/app/pages/dashboards/charts/nc-receptor/nc-receptor.component.html
@@ -1,1 +1,28 @@
-<p>nc-receptor works!</p>
+<div class="d-flex flex-column align-items-center justify-content-center">
+  <div class="mb-3">
+    <h2>{{ title }}</h2>
+  </div>
+    <div class="d-flex justify-content-start mb-5" style="width:100%">
+      <p-dropdown
+      [options]="tiposNc"
+      [(ngModel)]="tiposNcAtual"
+      (onChange)="popular()"
+    ></p-dropdown>
+    </div>
+  <ngx-charts-bar-vertical
+    [view]="size"
+    [results]="single"
+    [gradient]="gradient"
+    [xAxis]="showXAxis"
+    [yAxis]="showYAxis"
+    [legend]="showLegend"
+    [showXAxisLabel]="showXAxisLabel"
+    [showYAxisLabel]="showYAxisLabel"
+    [xAxisLabel]="xAxisLabel"
+    [yAxisLabel]="yAxisLabel"
+    [scheme]="'ocean'"
+
+    
+  >
+  </ngx-charts-bar-vertical>
+</div>
