--- a/src/app/pages/dashboards/dashboards.component.html
+++ b/src/app/pages/dashboards/dashboards.component.html
@@ -1,7 +1,14 @@
-<div class="d-flex justify-content-center" *ngIf="carregou()" >
-    <app-nc-emissor [size]="[1100,400]"></app-nc-emissor>
+<div
+  class="d-flex flex-column justify-content-center align-items-center"
+  *ngIf="carregou()"
+>
+  <app-nc-receptor-emissor [size]="[1600, 400]"></app-nc-receptor-emissor>
+  <app-nc-status [size]="[1600, 400]"></app-nc-status>
+  <app-nc-year [size]="[1600, 400]"></app-nc-year>
+  <app-nc-types [size]="[1600, 400]"></app-nc-types>
+  <app-nc-emissor [size]="[1600, 400]"></app-nc-emissor>
+  <app-nc-receptor [size]="[1600, 400]"></app-nc-receptor>
+  <app-cost-sector [size]="[1600, 400]"></app-cost-sector>
+  <app-nc-count [size]="[1600, 400]"></app-nc-count> 
+<app-nc-actionplan [size]="[1600, 400]"></app-nc-actionplan>
 </div>
-
-
-
-
