--- a/src/app/pages/attach/attach.component.html
+++ b/src/app/pages/attach/attach.component.html
@@ -1,5 +1,5 @@
 <div class="div-attachment">
-  <h1>{{'global.fileInput.subtitle'| translate}}</h1>
+  <h1>{{ "global.fileInput.subtitle" | translate }}</h1>
   <div class="white-background" *ngIf="returnFiles(item).length == 0">
     <input
       type="file"
@@ -9,11 +9,33 @@
       multiple
     />
     <i class="pi pi-cloud-upload"></i>
-    <p>{{'global.fileInput.description'| translate}}</p>
+    <p *ngIf="returnFiles(item).length == 0">
+      {{ "global.fileInput.description" | translate }}
+    </p>
   </div>
-  <div class="white-background-files " *ngIf="returnFiles(item).length > 0">
-    <div *ngFor="let files of returnFiles(item)" class="d-flex justify-content-center align-items-center files mt-3">
-     {{ files.name }} <button (click)="clearFileByName( files.name )"><i class="bi bi-x"></i></button> 
+  <div class="white-background-files" *ngIf="returnFiles(item).length > 0">
+    <div class="d-flex justify-content-start" style="width: 100%;">
+      <label for="inputTag" style="cursor: pointer">
+        <i class="bi bi-plus" style="font-size: 30px;"></i>
+        <input
+          id="inputTag"
+          type="file"
+          accept=".pdf,image/jpeg,image/png,xlsx,xls"
+          class=""
+          (change)="onUpload($event, item)"
+          style="display: none"
+          multiple
+        />
+      </label>
+    </div>
+    <div
+      *ngFor="let files of returnFiles(item)"
+      class="d-flex justify-content-center align-items-center files mt-3"
+    >
+      {{ files.name }}
+      <button (click)="clearFileByName(files.name)">
+        <i class="bi bi-x"></i>
+      </button>
     </div>
   </div>
 </div>
