--- a/src/app/pages/dashboards/charts/nc-actionplan/nc-actionplan.component.html
+++ b/src/app/pages/dashboards/charts/nc-actionplan/nc-actionplan.component.html
@@ -10,5 +10,7 @@
     ></p-dropdown>
   </div>
 
-  <plotly-plot [data]="graph.data" [layout]="graph.layout"> </plotly-plot>
+  
+    <plotly-plot [data]="graph.data" [layout]="graph.layout" [useResizeHandler]="true" [style]="{position: 'relative', width: '1200px', height: '500px'}"> </plotly-plot>
+  
 </div>
